# insuranceAPP

./: .gitignore  DifyAPI.md  README.md
insuranceApp/: DEPLOY.md  README.md  (+1 more)
insuranceApp/backend/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
insuranceApp/backend/app/: main.py
insuranceApp/backend/app/api/: admin.py  ai_modules.py  auth.py  basic_medical_insurance.py  deps.py  experiment.py  goals.py  insurance_list.py  insurance_products.py  logs.py  social_pension_insurance.py  user_info.py
insuranceApp/backend/app/core/: config.py  error_handler.py  logging_config.py  security.py
insuranceApp/backend/app/db/: base.py  init_db.py  migration.py  sql_importer.py
insuranceApp/backend/app/db/crud/: basic_medical_insurance.py  insurance_product.py  social_pension_insurance.py
insuranceApp/backend/app/db/importers/: __init__.py  basic_medical_insurance_importer.py  insurance_products_importer.py  social_pension_insurance_importer.py
insuranceApp/backend/app/models/: basic_medical_insurance.py  goal.py  insurance_list.py  insurance_product.py  social_pension_insurance.py  user.py  user_info.py
insuranceApp/backend/app/schemas/: admin.py  basic_medical_insurance.py  goal.py  insurance_list.py  insurance_product.py  social_pension_insurance.py  user.py  user_info.py
insuranceApp/backend/datas/: 医疗保险.xlsx  基本医保.xlsx  定期寿险.xlsx  年金.xlsx  社会养老保险.xlsx  重疾险.xlsx  非年金.xlsx
insuranceApp/backend/sql/: accident.sql  annuity.sql  critical_illness.sql  medical.sql  termlife.sql  wholelife.sql  表说明.md
(+90 files in other folders)
